--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-Django>=1.11,<1.12
-Scrapy>=1.5,<1.6
-scrapy-djangoitem>=1.1.1,<1.2
-scrapy-splash>=0.7,<0.8
-scrapyd>=1.2,<1.3
-jsonpath-rw>=1.4
-kombu>=3.0.37,<3.1
-Celery==3.1.25
-django-celery==3.2.1
-future>=0.17,<0.18
-pillow>=5.0,<8.0
-attrs>=17.4.0
+Django>=3.0.5
+Scrapy>=2.0.1
+scrapy-djangoitem>=1.1.1
+scrapy-splash>=0.7.2
+scrapyd>=1.2.1
+jsonpath-rw>=1.4.0
+django-celery==3.3.1
+future>=0.18.2
+pillow>=7.1.1
 
